examples/test/testpolicy16138.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16138
  namespace: namespace290
spec:
  podSelector:
    matchLabels:
      key45: value20
      key48: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value33
      podSelector:
        matchLabels:
          key14: value0
          key33: value47
          key39: value26
